--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -7,7 +7,7 @@
 html {
     background-color: $background-color;
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     letter-spacing: 1px;
     color: $font-color;
