--- a/scss/layout/_dailyForecast.scss
+++ b/scss/layout/_dailyForecast.scss
@@ -1,5 +1,5 @@
 .dailyForecast {
-    .dailyForecast__title {
+    .dailyForecast_title {
         font-size: 1.1rem;
         text-align: center;
         margin-top: 0.5rem;
@@ -9,7 +9,7 @@
         }
     }
 
-    .dailyForecast__contents {
+    .dailyForecast_contents {
         flex-grow: 1;
         @include flexCenter;
         justify-content: space-evenly;
